# minion

./: .gitignore  README.md  minion.md
data/: test1a.minion  test2.json  test2a.minion  test3.json  test4.json  test4.minion
gominion/: go.mod  minion.go  minion_test.go
minion_c/: CMakeLists.txt  main.c  minion.c
minion_cxx/: README  main.cpp  minion.cpp  minion.h
minion_cxx_1/: minion.cpp  minion.h
minion_cxx_2/: README  minion.cpp
minion_cxx_c/: build.sh  minion.cpp
minion_cxx_new/: CMakeLists.txt  README  main.cpp  minion.cpp  minion.h
minion_cxx_new2/: main.cpp  minion.cpp  minion.h
minion_cxx_new3/: README  main.cpp  minion.cpp  minion.h
minion_cxx_new4/: minion.cpp  minion.h
minion_cxx_new5/: minion.cpp  minion.h
minion_cxx_new6/: README  main.cpp  minion.cpp  minion.h
minion_cxx_new7/: README  main.cpp  minion.cpp  minion.h
minion_cxx_shared/: main.cpp  minion.cpp  minion.h
minion_cxx_shared2/: README  main.cpp  minion.cpp  minion.h
minion_cxx_test/: CMakeLists.txt  main_1.cpp
minion_cxx_test2/: README  main.cpp  minion.cpp  minion.h
minion_go/: minion.go
